final commit of the day

--- a/getdinerotoday/templates/landingpages/contact.html
+++ b/getdinerotoday/templates/landingpages/contact.html
@@ -34,7 +34,7 @@
 <div class="page-content">
 
 <!--contact start-->
-
+{% if True == true %}
 <section class="contact-1">
   <div class="container">
     <div class="row align-items-center">
@@ -51,6 +51,8 @@
     </div>
   </div>
 </section>
+{% endif %}
+
 
 <!-- <section class="contact-info p-0 z-index-1">
   <div class="container">
