--- a/businesscreditcourse/templates/home.html
+++ b/businesscreditcourse/templates/home.html
@@ -2,24 +2,29 @@
 {% load static %}
 {% block content %}
 
-    <div class="row page-header">
-        <h3>Business Credit Course</h3>
+{% if dynamic.show_business_credit_course %}
+<div class="row page-header">
+        <h3></h3>
     </div>
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/jj6AyUyl15Y" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+{{dynamic.business_credit_course_video_link|safe}}
+  
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <div class="card-body">
-                    <h3>Watch The Video Above To Get An Introduction To The Business Credit Building Course Portal</h3>
+                    <h3>{{dynamic.business_credit_course_video_link_text}}</h3>
                 </div>
             </div>
         </div>
     </section>
+
+{% endif %}
+ 
+
+   
 
 {% endblock %}
