--- a/creditcourse/templates/maincreditfile.html
+++ b/creditcourse/templates/maincreditfile.html
@@ -1,23 +1,27 @@
 {% extends "pages/base-creditcourse.html" %}
 {% load static %}
 {% block content %}
-
-    <div class="row page-header">
+{% if dynamic.show_personal_credit_course %}
+  <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
+        <h3>{{dynamic.personal_credit_course_video_Heading}}</h3>
         </div>
     </div>
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-              <iframe width="100%" height="515" src="https://www.youtube.com/embed/0JMgyfFZfiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             {{dynaminc.personal_credit_course_video_link|safe}}
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <div class="card-body">
-                    <center><h3>Watch The Video Above To Learn How To Use Our Credit Repair Course</center>
+                    <center><h3>{{dynamic.personal_credit_course_video_link_text}}</center>
                 </div>
             </div>
     </section>
+
+{% endif %}
+  
 
 {% endblock %}
