--- a/getdinerotoday/templates/pages/base-freewhitelabelprogramonboarding.html
+++ b/getdinerotoday/templates/pages/base-freewhitelabelprogramonboarding.html
@@ -17,6 +17,8 @@
                     <!-- <ul class="nav-second-level nav flex-column " aria-expanded="false"> -->
                        <li class="nav-item"><a href="{% url 'freewhitelabelprogramonboarding:onboarding' %}" class="nav-link">Client Onboarding Dashboard</a></li>
                        <li class="nav-item"><a href="{% url 'freewhitelabelprogramonboarding:whitelabelaccess' %}" class="nav-link">Purchase Wholesale White Label Access For Client </a></li>
+                        <li class="nav-item"><a href="{% url 'freewhitelabelprogramonboarding:freewhitelabel-resource' %}" class="nav-link">Partner Resources</a></li>
+                        <li class="nav-item"><a href="{% url 'freewhitelabelprogramonboarding:freewhitelabel-portals' %}">View your portals</a></li>
                           <!-- </ul> -->
                </ul>
             </div>
