--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -88,42 +88,69 @@
                             <span></span>
                             <span></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    {% if dynamic.show_navigation_bar_links %}
+                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <!-- Left nav -->
+
                             <ul id="main-menu" class="nav navbar-nav ml-auto mr-auto">
-                                <li class="nav-item"><a class="nav-link" href="/">Home</a>
+
+                                {% if dynamic.show_navigation_bar_link_1%}
+
+                                <li class="nav-item"><a class="nav-link" href="{{ dynamic.navigation_bar_link_1_link }}">{{dynamic.navigation_bar_link_1_text}}</a>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="/about-us">About Us</a><br>
-                                    <ul>
-                                        <!--  <li class="nav-item"><a class="nav-link" href="/faq">Faq</a>
-                                          </li>
-                                          <br> -->
-                                        <li><a class="nav-link" href="/about-us">Our Story</a>
-                                        </li>
-                                        <br>
-                                    <!--    <li><a class="nav-link" href="/testimonial">Testimonials</a>
-                                        </li> -->
-                                        </li>
-                                    </ul>
+                                {% endif %}
+
+                                {% if dynamic.show_navigation_bar_link_2 %}
+
+                                <li class="nav-item"><a class="nav-link" href="{{ dynamic.navigation_bar_link_2_link }}">{{dynamic.navigation_bar_link_2_text}}</a><br>
+{#                                    <ul>#}
+{#                                        <!--  <li class="nav-item"><a class="nav-link" href="/faq">Faq</a>#}
+{#                                          </li>#}
+{#                                          <br> -->#}
+{#                                        <li><a class="nav-link" href="{{ dynamic }}">Our Story</a>#}
+{#                                        </li>#}
+{#                                        <br>#}
+{#                                    <!--    <li><a class="nav-link" href="/testimonial">Testimonials</a>#}
+{#                                        </li> -->#}
+{#                                        </li>#}
+{#                                    </ul>#}
                                 </li>
+                                {% endif %}
 
 
-                                <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a>
+
+                                {% if dynamic.show_navigation_bar_link_3 %}
+                                <li class="nav-item"><a class="nav-link" href="{{ dynamic.navigation_bar_link_3_link }}">{{ dynamic.navigation_bar_link_3_text }}</a></li>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" class="nav-link" href="/services">Services</a>
+                                {% endif %}
+
+
+                                {% if  dynamic.show_navigation_bar_link_4 %}
+                                    <li class="nav-item"><a class="nav-link" class="nav-link" href="{{ dynamic.navigation_bar_link_4_link }}">{{ dynamic.navigation_bar_link_4_text  }}</a>
                                 </li>
+                                {% endif %}
+
+
                                 {% if dynamic.is_main_site and dynamic.show_index_white_label %}
                                     <li class="nav-item"><a class="nav-link" href="/whitelabel">White Label Program</a>
                                     </li>
                                 {% endif %}
-                                <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a>
+                           {% if dynamic.show_navigatgion_bar_link_5 %}
+                               <li class="nav-item"><a class="nav-link" href="{{ dynamic.navigation_bar_link_5_link }}">{{ dynamic.navigation_bar_link_5_text }}</a>
                                 </li>
+
+                           {% endif %}
+
+                                {% if dynamic.show_navigatgion_bar_link_6 %}
                                 <div class="client-loginshow">
 
-                                    <li class="nav-item"><a class="nav-link" href="/dashboard" target="_blank">Client
-                                        Login</a>
+                                    <li class="nav-item"><a class="nav-link" href="{{dynamic.navigation_bar_link_6_link}}" target="_blank">{{ dynamic.navigation_bar_link_6_text }}
+                                        </a>
                                     </li>
                                 </div>
+                                {% endif %}
+
+
 
                                 <style media="screen">
                                     @media screen and (min-width: 576px) {
@@ -134,6 +161,8 @@
                                 </style>
                             </ul>
                         </div>
+                    {% endif %}
+
                         <a class="btn btn-white btn-sm" href="/dashboard" target="_blank"
                            data-text="Client Login">
                             Client Login
