--- a/goals/templates/goals/create_my_portal.html
+++ b/goals/templates/goals/create_my_portal.html
@@ -22,6 +22,8 @@
     </div>
 
     <section class="main-content" id="starting">
+
+        {% if show_portal%}
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="jumbotron jumbotron-fluid">
@@ -46,7 +48,7 @@
             {% endif %}
         </div>
         <br><br><br>
-        <div class="row mb-5">
+           <div class="row mb-5">
             {% for portal in available_portals %}
                 {% if portal.code == 'affiliate_partner' and not dynamic.is_main_site %}
                 {% else %}
@@ -75,6 +77,8 @@
                     Save Changes
                 </button>
             </div>
+    {% endif %} 
+
             <div class="row mt-3 mx-0">
                     {% if my_portals.all.count > 0 %}
                         <div class="col-12 mb-3">
