--- a/goals/templates/goals/goals_base.html
+++ b/goals/templates/goals/goals_base.html
@@ -14,9 +14,14 @@
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
 
+
+                    {% if show_portal %}
+
                     <li class="nav-item">
                         <a href="{% url 'homepage' %}" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
                     </li>
+                                            {% endif %}
+
 
                     {% if request.user.profile.virtual_access_card_paid %}
                         <li class="nav-item">
