--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -130,11 +130,11 @@
                                 </li>
                                 {% endif %}
 
-
-                                {% if dynamic.is_main_site and dynamic.show_index_white_label %}
-                                    <li class="nav-item"><a class="nav-link" href="/whitelabel">White Label Program</a>
-                                    </li>
-                                {% endif %}
+{##}
+{#                                {% if dynamic.is_main_site and dynamic.show_index_white_label %}#}
+{#                                    <li class="nav-item"><a class="nav-link" href="/whitelabel">White Label Program</a>#}
+{#                                    </li>#}
+{#                                {% endif %}#}
                            {% if dynamic.show_navigation_bar_link_5 %}
                                <li class="nav-item"><a class="nav-link" href="{{ dynamic.navigation_bar_link_5_link }}">{{ dynamic.navigation_bar_link_5_text }}</a>
                                 </li>
