--- a/whitelabelpartnerportal/templates/addzelleinfo.html
+++ b/whitelabelpartnerportal/templates/addzelleinfo.html
@@ -24,13 +24,13 @@
     </div>
 
     <section class="main-content">
-        <div class="row">
+        {% comment %} <div class="row">
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/cwkO0KyI0UI" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
-        </div>
+        </div> {% endcomment %}
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
