added zelle accound full crud operations

--- a/whitelabelpartnerportal/templates/addzelleinfo_form.html
+++ b/whitelabelpartnerportal/templates/addzelleinfo_form.html
@@ -46,7 +46,8 @@
                             </div>
                             <div class="form-group">
                              <label for="zelle_phone">Zelle Phone Number</label>
-                                <input type="tel" name="zelle_phone" id="=zelle_phone"/>
+                               <input type="text" name="zelle_phone" pattern="[7-9]{1}[0-9]{9}" 
+       title="Phone number with 7-9 and remaing 9 digit with 0-9">
                             </div>
                             <div class="btn-toolbar">
                                 <button type="submit" name="commit" class="btn btn-primary mr-1">Submit</button>
