added zelle accound full crud operations

--- a/whitelabelpartnerportal/templates/addzelleinfo_form.html
+++ b/whitelabelpartnerportal/templates/addzelleinfo_form.html
@@ -38,7 +38,7 @@
                     <div class="col-md-12">
                         <form action="/whitelabelpartnerportal/addzelleinfoform" accept-charset="UTF-8"
                               method="post">{% csrf_token %}
-                            <h1>Plzz Fill-Out At Least One Field</h1>
+                            <h1>Please Fill-Out At Least One Field</h1>
                             <div class="form-group">
                                 <label for="zelle_email">Zelle Email</label>
                                 <input type="email" name="zelle_email" id="=zelle_email"/>
