added zelle accound full crud operations

--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -419,7 +419,7 @@
                                     
                                     {% if dynamic.first_package_1_show_button %}
                                           <div class="col-md-12 mt-2">
-                                        <a href="{{first_package_1_button_link}}" target="_blank"
+                                        <a href="{{dynamic.first_package_1_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
                                            {{dynamic.first_package_1_button_text}}
 </a>
@@ -429,7 +429,7 @@
                                     {% if dynamic.first_package_2_show_button %}
 
                                                                                   <div class="col-md-12 mt-2">
-                                        <a href="{{first_package_2_button_link}}" target="_blank"
+                                        <a href="{{dynamicfirst_package_2_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
                                            {{dynamic.first_package_2_button_text}}
 </a>
@@ -468,7 +468,7 @@
 
                                     {% if dynamic.second_package_1_show_button %}
                                           <div class="col-md-12 mt-2">
-                                        <a href="{{second_package_1_button_link}}" target="_blank"
+                                        <a href="{{dynamic.second_package_1_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
                                            {{dynamic.second_package_1_button_text}}
 </a>
@@ -478,7 +478,7 @@
                                     {% if dynamic.second_package_2_show_button %}
 
                                                                                   <div class="col-md-12 mt-2">
-                                        <a href="{{second_package_2_button_link}}" target="_blank"
+                                        <a href="{{dynamic.second_package_2_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
                                            {{dynamic.second_package_2_button_text}}
 </a>
