added zelle accound full crud operations

--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -421,7 +421,7 @@
                                           <div class="col-md-12 mt-2">
                                         <a href="{{dynamic.first_package_1_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
-                                           {{dynamic.first_package_1_button_text}}
+                                           {{dynamic.first_package_1_button_text |safe}}
 </a>
                                     </div>
                                     {% endif %}
@@ -431,7 +431,7 @@
                                                                                   <div class="col-md-12 mt-2">
                                         <a href="{{dynamicfirst_package_2_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
-                                           {{dynamic.first_package_2_button_text}}
+                                           {{dynamic.first_package_2_button_text |safe}}
 </a>
                                     </div>
                                     {% endif %}
@@ -470,7 +470,7 @@
                                           <div class="col-md-12 mt-2">
                                         <a href="{{dynamic.second_package_1_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
-                                           {{dynamic.second_package_1_button_text}}
+                                           {{dynamic.second_package_1_button_text|safe}}
 </a>
                                     </div>
                                     {% endif %}
@@ -480,7 +480,7 @@
                                                                                   <div class="col-md-12 mt-2">
                                         <a href="{{dynamic.second_package_2_button_link}}" target="_blank"
                                            class="btn btn-theme btn-circle">
-                                           {{dynamic.second_package_2_button_text}}
+                                           {{dynamic.second_package_2_button_text|safe}}
 </a>
                                     </div>
                                     {% endif %}
