--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -421,11 +421,11 @@
                               <a href="https://tawk.to/chat/5f678306f0e7167d00120839/default" target="_blank" class="nav-link"><span
                                       class="toggle-none">Live Chat</span></a>
                           </li>      -->
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="https://creator.us.uneeq.io/try/ef9e5b4c-deb5-4acb-acfb-7ba07e8bc8be" target="_blank"
                                class="nav-link"><span
                                     class="toggle-none">Your AI Customer Success Agent</span></a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a href="https://kleuishop.com/" target="_blank" class="nav-link"><span
                                     class="toggle-none">Shop At Our Online Store <br> *(Get Business Cards, Clothes & Much More!)*</span></a>
