--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -281,7 +281,7 @@
                             <a href="{% url 'business:lifeevents' %}" class="nav-link"> Normal Life Events </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'lifeevents:ecredable' %}" class="nav-link"> Ecredable(Add Multiple Tradelines At Once) </a>
+                            <a href="{% url 'business:ecredable' %}" class="nav-link"> Ecredable(Add Multiple Tradelines At Once) </a>
                         </li>
 
                         {% if dynamic.show_credit_repair_plan %}
