--- a/business/templates/life_events/ecredable.html
+++ b/business/templates/life_events/ecredable.html
@@ -19,7 +19,7 @@
 
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Normal Life Events</h2>
+            <h2>Use Ecredable To Add Multiple Business Tradelines</h2>
         </div>
     </div>
 
@@ -29,12 +29,11 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
-                    <div class="card-header">Need Extra Money For Holiday Shopping?</div>
-                    <img src="https://images.pexels.com/photos/919436/pexels-photo-919436.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    <div class="card-header">Add Business Tradelines With Ecredable</div>
+                    <img src="http://ww1.prweb.com/prfiles/2020/11/04/17524316/gI_159002_ecredable_logo%20-%20LG.png"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
-                        <a class="btn btn-primary btn-block" href="{% url "business:lifeeventsfinancialproducts" %}">View The Best
-                            Financing Products</a>
+                        <a class="btn btn-primary btn-block" href="https://business.ecredable.com/" target="_blank">Sign Up For Ecredable Too Add Business Tradelines</a>
                     </div>
                 </div>
 
