--- a/business/templates/life_events/ecredable.html
+++ b/business/templates/life_events/ecredable.html
@@ -30,7 +30,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
                     <div class="card-header">Add Business Tradelines With Ecredable</div>
-                    <img src="http://ww1.prweb.com/prfiles/2020/11/04/17524316/gI_159002_ecredable_logo%20-%20LG.png"
+                    <img src="https://business.ecredable.com/portals/0/images/business/small_business_tradelines_hero3.png"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
                         <a class="btn btn-primary btn-block" href="https://business.ecredable.com/" target="_blank">Sign Up For Ecredable Too Add Business Tradelines</a>
