--- a/business/templates/businessCreditBuilding/businessBankAccount.html
+++ b/business/templates/businessCreditBuilding/businessBankAccount.html
@@ -29,29 +29,6 @@
     </div>
     <section class="main-content">
         <div class="row">
-            <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/4YjMxNHZvlM" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="https://dvh1deh6tagwk.cloudfront.net/niche-builder/5daca7d7e8528.png" height="200px"
-                             width="100%" alt="">
-                        <br><br>
-                        <h5 class="card-title">Do You Need A Business Bank Account?</h5>
-                        <h5 class="card-title">You Can Set Up Your Business Account Completely Online With AZLO Bank
-                            <br><br><b>*Fee Free Checking Account*</b></h5>
-                        <div class="btn-group">
-                            <a target="_blank" class="btn btn-primary" href="https://www.azlo.com/">Click Here To Set Up
-                                <br>Your Bank Account</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
@@ -61,7 +38,7 @@
                         <h5 class="card-title">Do You Need A Business Bank Account?</h5>
                         <h5 class="card-title">We Also Recommend JP Morgan Chase </h5>
                         <div class="btn-group">
-                            <a target="_blank" class="btn btn-primary" href="https://www.azlo.com/">Click Here To Go
+                            <a target="_blank" class="btn btn-primary" href="https://www.chase.com/business">Click Here To Go
                                 <br>To Their Website</a>
                         </div>
                     </div>
