added the shutoff client option in whitelable client progress

--- a/whitelabelpartnerportal/templates/ClientProgress.html
+++ b/whitelabelpartnerportal/templates/ClientProgress.html
@@ -22,7 +22,7 @@
                                 <th>What Is Purchased</th>
                                 <th>What Is Recommended</th>
                                 <th>Client Can See Only Created Portals</th>
-                                {% comment %} <th>Deactivate Client Account</th> {% endcomment %}
+                                <th>Deactivate Client Account</th>
                                 <th>Create Portal</th>
 
                             </tr>
@@ -46,13 +46,15 @@
                                             </label>
                                         </form>
                                     </td>
-                                     {% comment %} <form method="post">
+                                <td> <form method="post">
                                             {% csrf_token %}
                                             <label>
-                                                <input hidden name="see_only_created_portal" value="{{ client.user.id }}">
-                                                <input type="checkbox" name="access" onChange="this.form.submit()" {% if client.user.profile.can_see_only_created_portals %} checked {% endif %} #}/>
+                                                <input hidden name="shut_of_client_account" value="{{ client.user.id }}">
+                                                <input type="checkbox" name="access" onChange="this.form.submit()"  {% if client.user.is_active %} checked {% endif %}  />
+
                                             </label>
-                                        </form> {% endcomment %}
+                                        </form> </td>
+
                                     <td>
                                         <form method="post">
                                             {% csrf_token %}
