added the shutoff client option in whitelable client progress

--- a/whitelabelpartnerportal/templates/ClientProgress.html
+++ b/whitelabelpartnerportal/templates/ClientProgress.html
@@ -22,7 +22,7 @@
                                 <th>What Is Purchased</th>
                                 <th>What Is Recommended</th>
                                 <th>Client Can See Only Created Portals</th>
-                                <th>Deactivate Client Account</th>
+                                <th>Activate Client Account</th>
                                 <th>Create Portal</th>
 
                             </tr>
